// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as form group 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <ToggleSwitch
        ariaDescribedby={null}
        className="form__control toggle-switch"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with error, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <ToggleSwitch
        ariaDescribedby="error-guid-1"
        className="form__control toggle-switch"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        foo
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText and error, using two aria-describedby attributes 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <ToggleSwitch
        ariaDescribedby="error-guid-1 help-guid-1"
        className="form__control toggle-switch"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        bar
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
      tag="label"
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <ToggleSwitch
        ariaDescribedby="help-guid-1"
        className="form__control toggle-switch"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders the basic input 1`] = `
<span
  class="controls"
>
  <input
    class="form__control toggle-switch"
    type="checkbox"
  />
  <span
    class="toggle-switch-label"
  />
</span>
`;

exports[`renders the basic input with aria-describedby 1`] = `
<span
  class="controls"
>
  <input
    aria-describedby="foo"
    class="form__control toggle-switch"
    type="checkbox"
  />
  <span
    class="toggle-switch-label"
  />
</span>
`;

exports[`renders the basic input with id 1`] = `
<span
  class="controls"
>
  <input
    class="form__control toggle-switch"
    type="checkbox"
  />
  <span
    class="toggle-switch-label"
  />
</span>
`;

exports[`renders the basic input with idGuid 1`] = `
<span
  class="controls"
>
  <input
    class="form__control toggle-switch"
    id="bar"
    type="checkbox"
  />
  <span
    class="toggle-switch-label"
  />
</span>
`;

exports[`renders the basic input with placeholder 1`] = `
<span
  class="controls"
>
  <input
    class="form__control toggle-switch"
    placeholder="foo"
    type="checkbox"
  />
  <span
    class="toggle-switch-label"
  />
</span>
`;

exports[`renders the basic input with required 1`] = `
<span
  class="controls"
>
  <input
    class="form__control toggle-switch"
    required=""
    type="checkbox"
  />
  <span
    class="toggle-switch-label"
  />
</span>
`;

exports[`will prefer id over idGuid 1`] = `
<span
  class="controls"
>
  <input
    class="form__control toggle-switch"
    id="bar"
    type="checkbox"
  />
  <span
    class="toggle-switch-label"
  />
</span>
`;
